name:                reflex-dom-storage
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Dave Laing
maintainer:          dave.laing.80@gmail.com
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Reflex.Dom.Storage.Class
                     , Reflex.Dom.Storage.Base
                     , Data.GADT.Aeson
  build-depends:       base
                     , aeson
                     , bytestring
                     , containers
                     , constraints
                     , constraints-extras
                     , dependent-map
                     , dependent-sum
                     , exception-transformers
                     , ghcjs-dom
                     , jsaddle
                     , mmorph
                     , mtl
                     , primitive
                     , reflex
                     , reflex-dom-core
                     , ref-tf
                     , some
                     , text
  hs-source-dirs:      src
  ghc-options:         -Wall -O2
  default-language:    Haskell2010
